--- a/OX/package.json
+++ b/OX/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Usamaali.github.io/oxpremium",
+  "homepage": "https://usamaalikhan654.github.io/OxPremium/",
   "name": "oxpremium",
   "version": "0.1.0",
   "private": true,
