--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
-    "gh-pages": "^3.2.3",
+    "deploy": "^1.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-breadcrumbs": "^0.1.2",
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
