--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^4.6.0",
     "deploy": "^1.0.3",
     "react": "^17.0.2",
+    "react-back-to-top": "^1.0.3",
+    "react-back-to-top-button": "0.0.14",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-breadcrumbs": "^0.1.2",
     "react-carousel": "^4.3.0",
@@ -20,6 +22,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^5.3.0",
     "react-router-hash-link": "^2.4.3",
+    "react-router-scroll-top": "^0.3.1",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
