--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://usamaalikhan654.github.io/OxPremium/",
+  "homepage": "https://oxpremiumcompany.com/",
   "name": "oxpremium",
   "version": "0.1.0",
   "private": true,
